--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <title>About Me</title>   
             <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
             <link href="CSS/style.css" rel="stylesheet" type="text/css">
-            <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
     </head>
     <!--Header-->
     <body>
         <header class="background">
-            <img src="Images/New logo (1) copy.png"  class="logo" alt="logo" width="100px" height="100px">
+            <img src="New logo (1) copy.png"  class="logo" alt="logo" width="100px" height="100px">
             <nav class="menu-container">
                         <label for="toggle">&#9776;</label>
                         <input type="checkbox" id="toggle"/> 
@@ -19,14 +18,13 @@
                         <li><a href="third.html">Resume</a></li>
                     </ul>
                 </nav>
-              <a class="#" href="#"><button>Contact</button></a>
-              <!-- <i class="fa fa-bars" aria-hidden="true"></i> -->
+            <a class="#" href="#"><button>Contact</button></a>
         </header>  
     <!--Profile pic with Wo AM I description-->
     <br><br>
         <div class="hero">
          <div id="profile">
-            <img src="Images/IMG_3346 2.jpg" width="400px" height="460px" class="over-image">  
+            <img src="IMG_3346 2.jpg" width="400px" height="460px" class="over-image">  
             </div>
              <h1 class="name"> Hi, I am Victory Fejokwu</h1>
         </div>
@@ -47,7 +45,7 @@
     <div class="cards">
     <h1>Interests</h1>
         <div class="card">
-        <img src="Images/Beach.jpg" alt="beach" class="image" width="350px" height="390px">
+        <img src="Beach.jpg" alt="beach" class="image" width="350px" height="390px">
             <div class="card-content"> 
                 <h3>Travel</h3>
                 <p>The world becomes just a little smaller when you explore. 
@@ -55,7 +53,7 @@
             </div>   
        </div>
         <div class="card">
-        <img src="Images/Runway girls.jpg" alt="image" class="image" width="350px" height="390px">
+        <img src="Runway girls.jpg" alt="image" class="image" width="350px" height="390px">
             <div class="card-content"> 
                 <h3>Fashion</h3>
                 <p>It is a passion of mine. It is an art form. 
@@ -64,7 +62,7 @@
              </div>   
         </div>
         <div class="card">
-        <img src="Images/babatunde-olajide-jcQdBcW7Tmw-unsplash.jpg" alt="image" class="image" width="350px" height="390px">
+        <img src="babatunde-olajide-jcQdBcW7Tmw-unsplash.jpg" alt="image" class="image" width="350px" height="390px">
             <div class="card-content"> 
                 <h3>Culture</h3>
                 <p>Who I am today was because of where I come from. As a native-born Nigerian, even though I am American, 
@@ -78,19 +76,19 @@
      <h1>Specialties</h1>
      <div class="icons">
          <div class="icon">
-             <img src="Images/notes.svg" alt="image" width="120px" height="100px" class="image">
+             <img src="notes.svg" alt="image" width="120px" height="100px" class="image">
              <h3>User Research</h3>
          </div>
          <div class="icon">
-            <img src="Images/prototyping.svg" alt="image" width="100px" height="100px" class="image">
+            <img src="prototyping.svg" alt="image" width="100px" height="100px" class="image">
             <h3>Wireframes</h3>
         </div>
         <div class="icon">
-            <img src="Images/testing.svg" alt="image" width="100px" height="100px" class="image">
+            <img src="testing.svg" alt="image" width="100px" height="100px" class="image">
             <h3 class="testing">Testing</h3>
         </div>
         <div class="icon">
-            <img src="Images/wireframe.svg" alt="image" width="100px" height="100px" class="image">
+            <img src="wireframe.svg" alt="image" width="100px" height="100px" class="image">
             <h3>Prototyping</h3>
         </div>
      </div>
@@ -99,7 +97,7 @@
     <h1>Work</h1>
     <div class="overall">
         <div class="container">
-                <img src="Images/For mockup_iphone8spacegrey_portrait.png" alt="image" width=500px height=500px>
+                <img src="For mockup_iphone8spacegrey_portrait.png" alt="image" width=500px height=500px>
                 <div class="clear3"></div>
         </div>
         <div class="contain-words">
@@ -111,7 +109,7 @@
         <div class="clear"></div>
          <div class="container2">
             <div class="boxes">
-                <img src="Images/Mockup4.gif" alt="image" width="500px" height="300px">
+                <img src="Mockup4.gif" alt="image" width="500px" height="300px">
              </div>
          </div>
          <div class="contain-words2">
@@ -126,7 +124,7 @@
     <!--Footer-->
      <footer class="footer">
         <div class="footer-left">
-            <img src="Images/New logo (1) copy.png" alt="image" width="90px" height="90px" class="left">
+            <img src="New logo (1) copy.png" alt="image" width="90px" height="90px" class="left">
         </div>
         <!-- <div class="name">
             <h4>Victory Fejokwu</h4> -->
