--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>About Me</title>   
             <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-            <link href="CSS/style.css" rel="stylesheet" type="text/css">
+            <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <!--Header-->
     <body>
