--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         </div>
         <!--Footer icons -->
          <div class="footer-right">
-           <a class="linkedin" href="https://linkedin.com/in/victory-fejokwu"><img src="Images/linkedin.png" alt="image" class="icons" width="35px" height="35px"></a>
-            <img src="Images/behance-logo.png" alt="image" class="icons" width="35px" height="35px">
-            <img src="Images/instagram.png" alt="image" class="icons" width="35px" height="35px">
+           <a class="linkedin" href="https://linkedin.com/in/victory-fejokwu"><img src="linkedin.png" alt="image" class="icons" width="35px" height="35px"></a>
+            <img src="behance-logo.png" alt="image" class="icons" width="35px" height="35px">
+            <img src="instagram.png" alt="image" class="icons" width="35px" height="35px">
         </div>
     </footer> 
 </html>
