--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Header-->
     <body>
         <header class="background">
-            <img src="Images/New logo (1) copy.png"  class="logo" alt="logo" width="100px" height="100px">
+            <img src="New logo (1) copy.png"  class="logo" alt="logo" width="100px" height="100px">
             <label for="toggle">&#9776;</label> 
             <nav>
                  <ul>
@@ -23,7 +23,7 @@
     <br><br>
         <div class="hero">
          <div id="profile">
-            <img src="Images/IMG_3346 2.jpg" width="400px" height="460px" class="over-image">  
+            <img src="IMG_3346 2.jpg" width="400px" height="460px" class="over-image">  
             </div>
              <h1 class="name"> Hi, I am Victory Fejokwu</h1>
         </div>
@@ -44,7 +44,7 @@
     <div class="cards">
     <h1>Interests</h1>
         <div class="card">
-        <img src="Images/Beach.jpg" alt="beach" class="image" width="350px" height="390px">
+        <img src="Beach.jpg" alt="beach" class="image" width="350px" height="390px">
             <div class="card-content"> 
                 <h3>Travel</h3>
                 <p>The world becomes just a little smaller when you explore. 
@@ -52,7 +52,7 @@
             </div>   
        </div>
         <div class="card">
-        <img src="Images/Runway girls.jpg" alt="image" class="image" width="350px" height="390px">
+        <img src="Runway girls.jpg" alt="image" class="image" width="350px" height="390px">
             <div class="card-content"> 
                 <h3>Fashion</h3>
                 <p>It is a passion of mine. It is an art form. 
@@ -61,7 +61,7 @@
              </div>   
         </div>
         <div class="card">
-        <img src="Images/babatunde-olajide-jcQdBcW7Tmw-unsplash.jpg" alt="image" class="image" width="350px" height="390px">
+        <img src="babatunde-olajide-jcQdBcW7Tmw-unsplash.jpg" alt="image" class="image" width="350px" height="390px">
             <div class="card-content"> 
                 <h3>Culture</h3>
                 <p>Who I am today was because of where I come from. As a native-born Nigerian, even though I am American, 
@@ -75,19 +75,19 @@
      <h1>Specialties</h1>
       <div class="icons">
          <div class="icon1">
-             <img src="Images/notes.svg" alt="image" width="120px" height="100px" class="image">
+             <img src="notes.svg" alt="image" width="120px" height="100px" class="image">
              <h3>User Research</h3>
          </div>
          <div class="icon2">
-            <img src="Images/prototyping.svg" alt="image" width="100px" height="100px" class="image">
+            <img src="prototyping.svg" alt="image" width="100px" height="100px" class="image">
             <h3>Wireframes</h3>
         </div>
         <div class="icon3">
-            <img src="Images/testing.svg" alt="image" width="100px" height="100px" class="image">
+            <img src="testing.svg" alt="image" width="100px" height="100px" class="image">
             <h3 class="testing">Testing</h3>
         </div>
         <div class="icon4">
-            <img src="Images/wireframe.svg" alt="image" width="100px" height="100px" class="image">
+            <img src="wireframe.svg" alt="image" width="100px" height="100px" class="image">
             <h3>Prototyping</h3>
         </div>
      </div>
@@ -96,7 +96,7 @@
     <h1>Work</h1>
     <div class="overall">
         <div class="container">
-                <img src="Images/For mockup_iphone8spacegrey_portrait.png" alt="image" width=500px height=500px>
+                <img src="For mockup_iphone8spacegrey_portrait.png" alt="image" width=500px height=500px>
                 <div class="clear3"></div>
         </div>
         <div class="contain-words">
@@ -108,7 +108,7 @@
         <div class="clear"></div>
          <div class="container2">
             <div class="boxes">
-                <img src="Images/Mockup4.gif" alt="image" width="500px" height="300px">
+                <img src="Mockup4.gif" alt="image" width="500px" height="300px">
              </div>
          </div>
          <div class="contain-words2">
@@ -123,7 +123,7 @@
     <!--Footer-->
      <footer class="footer">
         <div class="footer-left">
-            <img src="Images/New logo (1) copy.png" alt="image" width="90px" height="90px" class="left">
+            <img src="New logo (1) copy.png" alt="image" width="90px" height="90px" class="left">
         </div>
         <!-- <div class="name">
             <h4>Victory Fejokwu</h4> -->
@@ -137,9 +137,9 @@
         </div>
         <!--Footer icons -->
          <div class="footer-right">
-           <a class="linkedin" href="https://linkedin.com/in/victory-fejokwu"><img src="Images/linkedin.png" alt="image" class="socialmedia" width="35px" height="35px"></a>
-            <img src="Images/behance-logo.png" alt="image" class="socialmedia" width="35px" height="35px">
-            <img src="Images/instagram.png" alt="image" class="socialmedia" width="35px" height="35px">
+           <a class="linkedin" href="https://linkedin.com/in/victory-fejokwu"><img src="linkedin.png" alt="image" class="socialmedia" width="35px" height="35px"></a>
+            <img src="behance-logo.png" alt="image" class="socialmedia" width="35px" height="35px">
+            <img src="instagram.png" alt="image" class="socialmedia" width="35px" height="35px">
         </div>
     </footer> 
 </html>
